[fix]: change parameters validation methods